--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -23,6 +23,8 @@ jobs:
       with:
         swift-version: ${{ matrix.swift }}
     - uses: actions/checkout@v4
+      with:
+        submodules: 'true'
     - name: Build
       run: swift build -v
     - name: Run tests
